# MCP_SERVER_STR

./: .env  .gitignore  config.json  main.py  pyproject.toml
src/: api_client.py  config.py  server.py  tools.py
